# engine-wgpu

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/models/: cube_light_tan.glb  monke.gltf  monkeyabuse.glb  orientation_test.glb  shadow_playground.glb  sphere.glb  suzanne.glb  test_scene.gltf  uvsphere.glb
assets/shaders/: fragment.glsl  line.frag  line.vert  object_picking.wgsl  pbr.frag  pbr.vert  pbr.wgsl  vertex.glsl
docs/: state.drawio
example/: Cargo.toml
example/src/: gui.rs  main.rs  util.rs
src/: commands.rs  example_renderer.rs  gui.rs  lib.rs  main.rs  renderer_impl.rs
src/lib/: Cargo.toml
src/lib/src/: buffer_array.rs  geometry.rs  lib.rs  managers.rs  scene.rs  scene_serde.rs  shader_types.rs  texture.rs
src/lib/src/scene/: light.rs  material.rs  mesh.rs  model.rs
src/lib/src/util/: mod.rs  shader_types.rs  texture.rs
src/playground/: buffer_copy.rs  compute.rs  graphics.rs  image.rs  mod.rs  window.rs
src/playground/shaders/: compute.glsl  fragment.glsl  mandelbrot.glsl  vertex.glsl
src/renderer/: Cargo.toml  camera.rs  example_renderer.rs  mod.rs  texture.rs
src/renderer/src/: camera.rs  commands.rs  events.rs  example_renderer.rs  gui.rs  initialization.rs  lib.rs  render_loop.rs  renderer.rs  scene.rs  texture.rs
src/renderer/src/pipelines/: descriptor_set_abstraction.rs  descriptor_set_controller.rs  grid.rs  line_pipeline.rs  mod.rs  object_picking.rs  outlining.rs  pbr.rs  pbr_pipeline.rs
src/renderer/src/shaders/: grid.wgsl  object_picking.wgsl  outlining.wgsl  pbr.wgsl
src/systems/: Cargo.toml
src/systems/particle/: Cargo.toml
src/systems/src/: lib.rs
src/systems/src/io/: Cargo.toml
src/systems/src/io/src/: gltf.rs  gltf_loader.rs  lib.rs  world_loader.rs  world_saver.rs
src/systems/src/sound/: Cargo.toml
src/util/: gltf.rs  mod.rs  scene.rs
