[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "src/renderer" }
systems = { path = "src/systems" }
lib = { path = "src/lib" }
glam = "0.24.1"
vulkano = "0.33.0"
image = "0.24"
egui_winit_vulkano = "0.24.0"
num-traits = "0.2"
itertools = "0.11.0"
rand = "0.8.5"
log = "0.4.19"
env_logger = "0.10.0"
dotenv = "0.15.0"
rfd = "0.11.4"


[profile.dev]
opt-level = 1

[[bin]]
name = "engine-bin"
path = "src/main.rs"

[workspace]
members = [
    "src/renderer",
    "src/systems",
    "src/lib"
]
