[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.1", features = ["serde"] }
image = "0.24"
gltf = "1.2"
rand = "0.8.5"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.18.0"
anyhow = "1.0.77"
bytemuck = { version = "1.14.0", features = ["derive"] }
itertools = "0.12.0"
slab = "0.4.9"
slotmap = "1.0.7"