[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.3"
glam = "0.24.1"
egui_winit_vulkano = "0.24.0"
systems = { path = "../systems" }