[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
systems = { path = "../systems" }
lib = { path = "../lib" }
log = "0.4.19"
wgpu = "0.18.0"
egui-wgpu = { version = "0.24.1", features = ["winit"] }
winit = "0.28.7"
anyhow = "1.0.77"