[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
vulkano = "0.33.0"
gltf = "1.2"
lib = {path = "../../../lib"}
base64 = "0.21.2"
urlencoding = "2.1.3"
image = "0.24"
