[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
gltf = { version = "1.2" , features = ["KHR_lights_punctual"]}
lib = {path = "../../../lib"}
base64 = "0.21.2"
urlencoding = "2.1.3"
image = "0.24"
log = "0.4.19"
rand = "0.8.5"
serde = "1.0.183"
serde_json = "1.0.104"
wgpu = "0.18.0"
bytemuck = "1.14.0"

[profile.dev.package.image]
opt-level = 3